--- a/tools/_scss/_variables.scss
+++ b/tools/_scss/_variables.scss
@@ -75,10 +75,12 @@ $nav-clr-border-type: solid;
 $nav-height: 80px;
 $nav-height-collapse: 50px;
 
-$brand-fontsize-lg: 3.7vw;
-$brand-fontsize-sm: 14px;
-$brand-lineheight-lg: 46px;
-$brand-lineheight-sm: 16px;
+$brand-fontsize-title-desktop: 4.1vw;
+$brand-fontsize-title-mobile: 6vw;
+$brand-fontsize-navbar: 14px;
+$brand-fontsize-tagline-desktop: 2.05vw;
+$brand-fontsize-tagline-mobile: 3vw;
+$brand-lineheight: .8; // used as a multiplier of fontsize
 
 $code-clr: rgba($white, 1);
 $code-clr-bg: rgba($brand-c1, .3);
